@@ -4,6 +4,7 @@ require 'rubygems/server'
 require 'stringio'
 
 class Gem::Server
+  attr_accessor :source_index
   attr_reader :server
 end
 
@@ -25,6 +26,7 @@ class TestGemServer < RubyGemTestCase
 
     @server.quick @req, @res
 
+    assert_equal 200, @res.status
     assert_match %r| \d\d:\d\d:\d\d |, @res['date']
     assert_equal 'text/plain', @res['content-type']
     assert_equal "a-1", @res.body
@@ -36,6 +38,7 @@ class TestGemServer < RubyGemTestCase
 
     @server.quick @req, @res
 
+    assert_equal 200, @res.status
     assert_match %r| \d\d:\d\d:\d\d |, @res['date']
     assert_equal 'text/plain', @res['content-type']
     assert_equal "a-1", Zlib::Inflate.inflate(@res.body)
@@ -47,6 +50,26 @@ class TestGemServer < RubyGemTestCase
 
     @server.quick @req, @res
 
+    assert_equal 200, @res.status
+    assert @res['date']
+    assert_equal 'text/plain', @res['content-type']
+    yaml = Zlib::Inflate.inflate(@res.body)
+    assert_match %r|Gem::Specification|, yaml
+    assert_match %r|name: a|, yaml
+    assert_match %r|version: "1"|, yaml
+  end
+
+  def test_quick_a_1_mswin32_gemspec_rz
+    a1_p = quick_gem 'a', '1' do |s| s.platform = Gem::Platform.local end
+    si = Gem::SourceIndex.new @a1.full_name => @a1, a1_p.full_name => a1_p
+    @server.source_index = si
+
+    data = StringIO.new "GET /quick/a-1-#{Gem::Platform.local}.gemspec.rz HTTP/1.0\r\n\r\n"
+    @req.parse data
+
+    @server.quick @req, @res
+
+    assert_equal 200, @res.status
     assert @res['date']
     assert_equal 'text/plain', @res['content-type']
     yaml = Zlib::Inflate.inflate(@res.body)
@@ -61,9 +84,10 @@ class TestGemServer < RubyGemTestCase
 
     @server.quick @req, @res
 
+    assert_equal 404, @res.status
     assert_match %r| \d\d:\d\d:\d\d |, @res['date']
     assert_equal 'text/plain', @res['content-type']
-    assert_equal 'No gems found matching z 9', @res.body
+    assert_equal 'No gems found matching "z" "9" nil', @res.body
     assert_equal 404, @res.status
   end
 
